# kafka-rust

./: .gitignore  Cargo.toml  Dockerfile  build.sh
.cursor/rules/: common.mdc  dev_process.mdc  kafka_core.mdc  project_goal.mdc  rust_impl.mdc  test.mdc
broker/: Cargo.toml
broker/src/: broker.rs  lib.rs  metadata.rs  request.rs  topic.rs
broker/src/handlers/: create_topic.rs  delete_topic.rs  describe_topic.rs  fetch.rs  get_cluster_info.rs  heartbeat.rs  join_group.rs  leave_group.rs  list_topics.rs  metadata.rs  mod.rs  offset_fetch.rs  produce.rs  sync_group.rs  update_topic_config.rs
broker/tests/: tests-brokers.rs  tests.rs
cfg/: Cargo.toml  cfg.toml
cfg/src/: lib.rs
cfg/tests/: test-config.rs
client/: Cargo.toml
client/src/: admin.rs  consumer.rs  group.rs  lib.rs  producer.rs
client/tests/: admin_test.rs  consumer_test.rs  producer_test.rs
network/: Cargo.toml
network/src/: lib.rs  message.rs  server.rs
network/tests/: binary_message_test.rs  network_tests.rs
producer/: Cargo.toml
producer/src/: lib.rs  producer.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  message.rs
protocol/src/message/: binary.rs  mod.rs  types.rs
protocol/src/request/: mod.rs  types.rs
protocol/tests/: protocol_tests.rs
queue/: Cargo.toml
queue/src/: lib.rs  queue.rs
queue/tests/: queye_tests.rs
replication/: Cargo.toml
src/: main.rs
storage/: Cargo.toml  test_log
storage/src/: back_code.rs  concurrency.rs  io_result.rs  lib.rs  mmap.rs  retention.rs  segment.rs
storage/tests/: storage_test.rs
tests/: broker_tests.rs  test_main.rs
(+1 files in other folders)
