[package]
name = "rust_kafka"
version = "0.1.0"
edition = "2021"


[workspace]
members = [ "broker", "client","cluster", "cfg","network", "protocol", "queue", "replication", "storage"]


[dependencies]
network = { path = "./network" }
storage = { path = "./storage" }
queue = { path = "./queue" }
client = { path = "./client" }
#broker = { path = "./broker" }
replication = { path = "./replication" }
cluster = { path = "./cluster" }
cfg = { path = "./cfg" }
protocol = { path = "./protocol" }


tokio = { version = "1.44.1", features = ["full"] }
