[package]
name = "broker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
queue = { path = "../queue" }
network = { path = "../network" }
protocol = { path = "../protocol" }
cfg = {path = "../cfg"}